@@ -43,7 +43,7 @@ public abstract class BufferedIndexInput extends IndexInput implements RandomAcc
   /** A buffer size for merges set to {@value #MERGE_BUFFER_SIZE}. */
   public static final int MERGE_BUFFER_SIZE = 4096;
 
-  private int bufferSize = BUFFER_SIZE;
+  private final int bufferSize;
 
   private ByteBuffer buffer = EMPTY_BYTEBUFFER;
 
@@ -72,7 +72,7 @@ public abstract class BufferedIndexInput extends IndexInput implements RandomAcc
     this.bufferSize = bufferSize;
   }
 
-  /** Returns buffer size. @see #setBufferSize */
+  /** Returns buffer size */
   public final int getBufferSize() {
     return bufferSize;
   }
@@ -220,55 +220,50 @@ public abstract class BufferedIndexInput extends IndexInput implements RandomAcc
     }
   }
 
+  private long resolvePositionInBuffer(long pos, int width) throws IOException {
+    long index = pos - bufferStart;
+    if (index >= 0 && index <= buffer.limit() - width) {
+      return index;
+    }
+    if (index < 0) {
+      // if we're moving backwards, then try and fill up the previous page rather than
+      // starting again at the current pos, to avoid successive backwards reads reloading
+      // the same data over and over again.  We also check that we can read `width`
+      // bytes without going over the end of the buffer
+      bufferStart = Math.max(bufferStart - bufferSize, pos + width - bufferSize);
+      bufferStart = Math.max(bufferStart, 0);
+      bufferStart = Math.min(bufferStart, pos);
+    } else {
+      // we're moving forwards, reset the buffer to start at pos
+      bufferStart = pos;
+    }
+    buffer.limit(0); // trigger refill() on read
+    seekInternal(bufferStart);
+    refill();
+    return pos - bufferStart;
+  }
+
   @Override
   public final byte readByte(long pos) throws IOException {
-    long index = pos - bufferStart;
-    if (index < 0 || index >= buffer.limit()) {
-      bufferStart = pos;
-      buffer.limit(0); // trigger refill() on read
-      seekInternal(pos);
-      refill();
-      index = 0;
-    }
+    long index = resolvePositionInBuffer(pos, Byte.BYTES);
     return buffer.get((int) index);
   }
 
   @Override
   public final short readShort(long pos) throws IOException {
-    long index = pos - bufferStart;
-    if (index < 0 || index >= buffer.limit() - 1) {
-      bufferStart = pos;
-      buffer.limit(0); // trigger refill() on read
-      seekInternal(pos);
-      refill();
-      index = 0;
-    }
+    long index = resolvePositionInBuffer(pos, Short.BYTES);
     return buffer.getShort((int) index);
   }
 
   @Override
   public final int readInt(long pos) throws IOException {
-    long index = pos - bufferStart;
-    if (index < 0 || index >= buffer.limit() - 3) {
-      bufferStart = pos;
-      buffer.limit(0); // trigger refill() on read
-      seekInternal(pos);
-      refill();
-      index = 0;
-    }
+    long index = resolvePositionInBuffer(pos, Integer.BYTES);
     return buffer.getInt((int) index);
   }
 
   @Override
   public final long readLong(long pos) throws IOException {
-    long index = pos - bufferStart;
-    if (index < 0 || index >= buffer.limit() - 7) {
-      bufferStart = pos;
-      buffer.limit(0); // trigger refill() on read
-      seekInternal(pos);
-      refill();
-      index = 0;
-    }
+    long index = resolvePositionInBuffer(pos, Long.BYTES);
     return buffer.getLong((int) index);
   }
 
